syntax = "proto3";

package schedule;

service ScheduleService{
    rpc CreateGroup(CreateGroupReq) returns (CreateGroupRes);
    rpc UpdateGroup(UpdateGroupReq) returns (UpdateGroupRes);
    rpc GetAllGroup(Empty) returns (GetAllGroupRes);
    
}

message CreateGroupReq{
    string id =1;
    string company_name =2;
    string user_id =3;
    string group_name =4;
    string created_at =5;
    string updated_at =6;
    string deleted_at =7;
}
message CreateGroupRes{
    string company_name =1;
    string group_name =2;

}

message UpdateGroupReq{
    string id =1;
    string company_name=2;
    string user_id =3;
    string group_name =4;
    string updated_at=5;
}
message UpdateGroupRes{
    string company_name =1;
    string group_name =2;
    string updated_at=3;
}

message GetAllGroupRes{
    repeated Getall groups=1;
}
message Getall{

    string group_name =1;
    string created_at =2;

}

message Empty{}